docs: enxuga README.md e adiciona secao de arquiteturas/features
README.md tinha virado um relatorio de sessao na parte do backend Truffle
(tabelas de benchmark, notas de distribuicao GraalVM, achados) em vez de
referencia rapida. Move o conteudo detalhado para docs/TRUFFLE-BACKEND.md e
deixa no README so a tabela de decisao (quando usar Truffle) com link para
o detalhe.

Adiciona secao "Arquiteturas e features" com tabela compacta de status por
preset (ARMv4T/ARMv5TE em producao, ARMv6K completo, Thumb-2 parcial, resto
planejado), linkando tasks/README.md (indice vivo) e ROADMAP.md (plano
narrativo) para detalhe. Corrige a tabela dispositivo->arquitetura do
ROADMAP.md, que ainda marcava ARMv6K/Thumb-2 como nao iniciados.