@@ -19,15 +19,33 @@ Pacotes principais:
 - `swi`: callbacks de SWI sem obrigar entrada na BIOS.
 - `debug`: `GdbServer` (stub GDB remote serial) e trace listener.
 
-Cobertura de instruções: **ARMv4T completo** (ARM7TDMI — todo o conjunto ARM/THUMB
-incluindo quirks de LDM/STM, acessos desalinhados com rotação e máscaras vazias) e
-**ARMv5TE** (ARM9E — `BLX`, `CLZ`, DSP multiplies `SMUL/SMLA/SMULW/SMLAW`, saturating
-`QADD/QSUB/QDADD/QDSUB`, `LDRD/STRD`, load-to-PC com interworking), tudo com emissão
-nativa no backend JVM. O interpretador é a referência de semântica; o backend compilado
-passa em harness de equivalência e em runs longos de divergence-checking com ROMs reais.
+O interpretador é a referência de semântica (G1); todo backend compilado passa em
+harness de equivalência e em runs longos de divergence-checking com ROMs reais.
 
 O core já possui bancos de `SP/LR` por modo, banco FIQ para `r8-r14`, `SPSR` por modo privilegiado, entrada real de `SWI` no vetor `0x08` quando não há handler host registrado, entrada de `IRQ` no vetor `0x18` quando `interruptLine` está ativa e o bit I do CPSR está limpo, e entrada de instrução indefinida no vetor `0x04` para opcodes ainda não implementados.
 Também há estado explícito de `HALT/STOP` para integração com registradores de I/O do dispositivo e waitstates opcionais por acesso de memória via `AddressSpace.accessCycles(...)`.
+
+## Arquiteturas e features
+
+Presets prontos em `ArmArchitecture` (`arch` package) — cada um liga um conjunto de
+`ArmFeature`s e, quando aplicável, extensões de decoder:
+
+| Arquitetura | Guest alvo | Status |
+|-------------|-----------|--------|
+| `ARMV4T` (ARM7TDMI) | GBA | ✅ produção (gbaemu) — ARM/THUMB completo, emissão ASM nativa |
+| `ARMV5TE` (ARM9E) | NDS | ✅ produção (ndsemu) — `BLX`/`CLZ`/DSP multiplies/saturating/`LDRD`/`STRD`, emissão ASM nativa |
+| `ARMV6K` | 3DS (núcleo ARM11), Raspberry Pi 1/Zero | ✅ decoder+IR+interpretador+ASM nativo completos (extend/reverse/UMAAL, SIMD paralelo, PKH/SAT/USAD8, LDREX/STREX/CLREX, CPS/SETEND/WFI); validado com binário ELF real no `armbox` |
+| `ARMV6K_THUMB2_PARTIAL` | subconjunto de ARMv7-A Thumb-2 | 🟡 parcial — infra + data-processing + load/store + misc prontos; falta branches+IT block (maior risco da trilha B, ver tasks) |
+| ARMv7-A + VFP | Linux/Android ARMv7 user-mode | ⬜ planejado |
+| MMU / full-system 32-bit | Kernel Linux ARMv6/v7 | ⬜ planejado |
+| 3DS (periféricos) | Novo emulador irmão | ⬜ planejado (depende de ARMv6K + VFP) |
+| AArch64 | Linux/Android arm64 | ⬜ planejado, épico próprio (frontend novo) |
+
+Backend Truffle/GraalVM (compilação alternativa, mesma IR — ver seção abaixo): ✅
+funcional em JVM, 🟡 native-image roda mas ainda não compila blocos reais.
+
+Índice completo e status task-a-task: [tasks/README.md](tasks/README.md). Plano
+narrativo por trilha: [ROADMAP.md](ROADMAP.md).
 
 ## Uso basico
 
@@ -118,75 +136,21 @@ O pipeline é o mesmo (cache → decode → lift → otimizar → emit); o que m
 | `TRUFFLE` | `TruffleJitRuntimeFactory.truffleArmThumb(...)` (módulo opcional `arm-jitter-truffle`) | Tiered: tier frio interpretado + tier quente em nós Truffle/AST, compilados por partial evaluation quando o host roda sob Graal/JVMCI | Blocos/traces grandes (superblocos) e `native-image` (trilha A) — **opt-in**, não é default de nenhum consumidor |
 | (ambos) | `divergenceCheckingArmThumb(...)` | Executa cada bloco pelos dois backends e lança na primeira divergência | Diagnóstico de bugs de codegen com ROM real |
 
-### Backend Truffle/GraalVM — quando escolher (task A4)
+### Backend Truffle/GraalVM — quando escolher
 
-O backend Truffle vive no módulo opcional `arm-jitter-truffle` (o core não depende de
-API Truffle) e é exposto por `TruffleJitRuntimeFactory.truffleArmThumb(cacheEntries,
-hotThreshold[, architecture])`, espelhando `JitRuntimeFactory.armThumb(...)`: mesmo
-pipeline tiered (frio interpretado + quente em background) e mesmo otimizador
-`StandardIrOptimizer.gba()` (aplicado no nível do `JitRuntime`, já que
-`TruffleCodeEmitter` — ao contrário do `AsmCodeEmitter` — não recebe otimizador no
-construtor).
+Módulo opcional `arm-jitter-truffle` (core não depende de API Truffle), exposto por
+`TruffleJitRuntimeFactory.truffleArmThumb(cacheEntries, hotThreshold[, architecture])`.
+Único motivo real de existir: viabilizar JIT dentro de **native-image**, onde o backend
+ASM não funciona (`defineClass` em runtime não é suportado). Em JVM normal o **ASM
+continua a escolha certa** para o tamanho de bloco típico de jogo (poucas dezenas de
+instruções) — o Truffle só vence em blocos/traces grandes, e o ponto de crossover é
+JVM-dependente (medido entre ~80 e 320 instruções). gbaemu/ndsemu não usam Truffle hoje
+(opt-in, sem wiring nos consumidores). O demo de native-image (`armbox`, task A5) roda
+mas ainda **não compila os blocos de verdade** (bailout de partial evaluation em blocos
+reais) — task de continuação: [A6](tasks/trilha-a-truffle/a6-especializacao-nos-truffle.md).
 
-**Bench honesto (coletado nesta task, não reaproveitado do spike A0):** compara os
-emissores de PRODUÇÃO (`AsmCodeEmitter`/`TruffleCodeEmitter`, não o protótipo
-descartável da A0) executando o mesmo bloco ALU reto (`MOV`/`ADD`/`SUB` +
-`Cycle`/`Fetch` por instrução, sem otimizador — igual à metodologia do
-`RELATORIO-A0.md`) em tamanhos crescentes, best-of-5 × 2.000.000 execuções, mesma
-máquina/sessão:
-
-| Ambiente | JVM (`java -version`) | Bloco | ASM (`JVM_BYTECODE`) | Truffle (Graal) | truffle/asm |
-|----------|------------------------|------:|----------------------:|-----------------:|------------:|
-| JBR 25 puro + Truffle **Unchained** (`-XX:+EnableJVMCI --upgrade-module-path=<compiler 25.0.1> --module-path=<truffle-api/runtime/compiler> --add-modules=org.graalvm.truffle`) | `openjdk 25.0.3` (JBR-25.0.3+9-480.61) | 20 instr | 3,93 ns | 20,36 ns | 5,17× (pior) |
-| idem | idem | 80 instr | 58,36 ns | **43,51 ns** | 0,75× (melhor) |
-| idem | idem | 320 instr | 734,62 ns | **134,62 ns** | 0,18× (5,5× melhor) |
-| GraalVM standalone (`E:\graalvm-jdk-25.0.3+9.1`, instalado pelo usuário) | `Java HotSpot(TM) 64-Bit Server VM 25.0.3` — banner `Oracle GraalVM 25.0.3+9.1 (build 25.0.3+9-LTS-jvmci-b01)` | 20 instr | 3,70 ns | 19,40 ns | 5,24× (pior) |
-| idem | idem | 80 instr | **15,30 ns** | 33,70 ns | 2,20× (pior) |
-| idem | idem | 320 instr | 693,00 ns | **96,60 ns** | 0,14× (7,18× melhor) |
-
-`Truffle.getRuntime().getName()` confirmado como `"GraalVM CE"` na via JBR/Unchained e
-como `"Oracle GraalVM"` na via standalone — em ambos os casos prova de compilação real
-pelo Graal (não fallback interpretado). "JBR 25 puro" e "Unchained" são, na prática, **a
-mesma via hoje**: o JBR usa o JVMCI embutido para rodar o Graal community como compilador
-de Truffle sem precisar trocar de JDK (confirmado pela A0 e reconfirmado aqui) — não
-existe uma segunda via "JBR sem Unchained" que compile Truffle de verdade neste ambiente,
-então a tabela não duplica a linha.
-
-**Nota sobre a distribuição standalone:** o instalador que o usuário baixou
-(`E:\graalvm-jdk-25.0.3+9.1`) é **Oracle GraalVM**, não GraalVM CE — o `release` do
-diretório lista módulos enterprise (`com.oracle.graal.graal_enterprise`,
-`com.oracle.svm.enterprise.truffle`) que não existem na distribuição community pura (desde
-o GraalVM 21 a Oracle passou a distribuir um único binário "Oracle GraalVM" gratuito via
-GFTC, com o compilador Graal Enterprise embutido, em vez do antigo binário separado
-"GraalVM CE"). Não há hoje uma distribuição GraalVM CE 25 LTS instalada nesta máquina;
-os números acima são da via standalone realmente disponível, e são a melhor aproximação
-possível de "Graal fora do JBR" — mantendo a ressalva no nome da coluna.
-
-**Achado não previsto:** a via standalone tem um C2 (HotSpot) que compila o bloco reto de
-80 instruções MUITO melhor que o C2 do JBR (15,3 ns vs 58,36 ns — quase 4× mais rápido no
-mesmo hardware/sessão) — troca a posição do crossover: no JBR/Unchained o Truffle já vence
-a partir de 80 instruções; na via standalone o ASM ainda vence a 80 e só perde a 320. O
-lado Truffle/Graal, em contraste, é consistente entre as duas vias (43,51/38,0 vs 33,70 ns
-a 80; 134,62 vs 96,60 ns a 320 — a via standalone é sempre igual ou mais rápida). A
-diferença está inteiramente do lado do C2/ASM: builds de HotSpot diferentes (JBR vs
-Oracle GraalVM), mesma versão 25.0.3, produzem qualidade de código bem diferente para um
-método reto gigante — não é um artefato de metodologia (verificado com 3 execuções
-consecutivas, resultado estável em todas). Conclusão prática: o ponto de crossover onde
-compensa trocar para Truffle **depende da JVM de destino**, não é um número fixo.
-
-**Recomendação:** para o tamanho de bloco típico de jogo (pequeno — a maioria dos blocos
-reais em gbaemu/ndsemu tem poucas dezenas de instruções), o **ASM continua a escolha
-certa** em qualquer uma das 3 linhas medidas — vence com folga a 20 instruções (5–5,2×) e
-é o backend padrão dos dois consumidores (não muda, G3). O Truffle vale a pena quando o
-bloco/trace é grande o suficiente para o C2 degradar, mas ONDE exatamente isso acontece é
-JVM-dependente (a partir de ~80 instruções no JBR/Unchained; só a partir de algum ponto
-entre 80 e 320 na via standalone) — candidato natural são os *loop-superblocos* da trilha
-C (`C0`), que devem medir no ambiente de destino em vez de assumir o crossover de uma
-única JVM. Fora de performance pura, o Truffle é a única opção viável sob `native-image`
-(ASM define classes em runtime, incompatível — ver A5). gbaemu/ndsemu não têm nenhuma
-integração com o backend Truffle hoje (fora de escopo desta task — factory é opt-in, sem
-wiring nos consumidores); os benches acima medem os emissores de produção diretamente
-dentro do arm-jitter, não dentro de um jogo real via ROM.
+Benchmarks completos, notas sobre a distribuição GraalVM e o relatório do native-image:
+**[docs/TRUFFLE-BACKEND.md](docs/TRUFFLE-BACKEND.md)**.
 
 ### Uso recomendado
 
